--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-  padding: none;
-  margin: none;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -10,4 +10,15 @@
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+.MainCont {
+  height: 300px;
+
+  background: url("./images/bg-desktop-light.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+i {
+  font-size: 10px;
+  color: #ffffff;
 }
