--- a/style.css
+++ b/style.css
@@ -123,3 +123,7 @@ input[type="checkbox"]:hover ~ label span {
   transform: translateY(-50px);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
+.task:checked ~ span {
+  text-decoration: line-through;
+  color: var(--DarkGrayishBlue);
+}
