feat: Implement delete completed tasks feature

--- a/style.css
+++ b/style.css
@@ -127,3 +127,6 @@ input[type="checkbox"]:hover ~ label span {
   text-decoration: line-through;
   color: var(--DarkGrayishBlue);
 }
+.clear {
+  cursor: pointer;
+}
