feat: Implement filter option and enhance styles

--- a/style.css
+++ b/style.css
@@ -122,13 +122,21 @@ input[type="checkbox"] ~ label span {
   cursor: pointer;
 }
 input[type="checkbox"]:checked ~ label span {
-  background: url("./images/icon-check.svg");
   background-image: var(--CheckBackground);
-  background-repeat: no-repeat;
 }
 input[type="checkbox"]:hover ~ label span {
   border-color: hsl(192, 100%, 67%) hsl(280, 87%, 65%) hsl(280, 87%, 65%)
     hsl(192, 100%, 67%);
+}
+input[type="checkbox"]:checked ~ label span::before {
+  content: "";
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  position: absolute;
+  background: url("./images/icon-check.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .todo__list {
   transform: translateY(-50px);
@@ -146,6 +154,7 @@ input[type="checkbox"]:hover ~ label span {
   align-items: center;
   cursor: grab;
   gap: 10px;
+  color: var(--VeryLightGray);
 }
 .btn-close {
   right: 10px;
@@ -156,4 +165,19 @@ input[type="checkbox"]:hover ~ label span {
 }
 .todos:hover .btn-close {
   display: initial;
+}
+.filter .active {
+  color: var(--BrightBlue);
+}
+.filter p {
+  cursor: pointer;
+}
+.filter p:hover {
+  color: var(--DarkGrayishBlue);
+}
+.fdiv div {
+  height: 50px;
+}
+.dark .fdiv div {
+  background-color: var(--VeryDarkDesaturatedBlue);
 }
